--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@table-library/react-table-library": "^4.1.7",
+    "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-table": "^8.17.3",
     "firebase": "^10.12.1",
     "localforage": "^1.10.0",
