--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-table": "^8.17.3",
+    "axios": "^1.7.2",
     "firebase": "^10.12.1",
+    "framer-motion": "^11.2.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
