--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-table": "^8.17.3",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "firebase": "^10.12.1",
     "framer-motion": "^11.2.10",
     "localforage": "^1.10.0",
